# ACG-Agent-Commerce-Gateway

./: .gitignore  README.md  pyproject.toml
src/mercora/: main.py
src/mercora/adapters/: flat_rate_tax.py  mock_payment.py  mock_shipping.py  payment.py  shipping.py  stripe_payment.py  tax.py
src/mercora/api/: carts.py  checkout.py  deps.py  oauth.py  orders.py  products.py
src/mercora/core/: config.py  logging.py  metrics.py  oauth_clients.py  rate_limit.py  request_context.py  security.py  telemetry.py
src/mercora/domain/: address.py  cart.py  money.py  order.py  product.py
src/mercora/infra/: cart_repository.py  db.py  idempotency_repository.py  order_repository.py  orm.py  product_repository.py  seed_data.py
src/mercora/mcp_server/: __main__.py  client.py  server.py  shaping.py
src/mercora/orchestration/: checkout_saga.py  errors.py
src/mercora/scripts/: seed_catalog.py
tests/agentic/: agent_runner.py  conftest.py  invariants.py  judge.py  test_eval_harness.py  test_fixture_smoke.py  test_invariants.py
tests/contract/: test_payment_adapter_contract.py
tests/integration/: conftest.py  test_cart_repository.py  test_carts_api.py  test_checkout_api.py  test_checkout_saga.py  test_mcp_server.py  test_multi_tenant_isolation.py  test_oauth_api.py  test_product_repository.py  test_products_api.py  test_request_id_middleware.py  test_scope_enforcement.py
tests/unit/: test_logging.py  test_metrics.py  test_rate_limit.py  test_security.py  test_seed_data.py
tests/unit/adapters/: test_mock_shipping.py  test_stripe_payment.py
tests/unit/domain/: test_address.py  test_cart.py  test_money.py  test_product.py
tests/unit/mcp_server/: test_shaping.py
