[project]
name = "mercora"
version = "0.1.0"
description = "Mercora — an MCP-fronted agentic commerce gateway"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "mcp>=1.28.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "stripe>=15.3.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-instrumentation-httpx>=0.64b0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0",
    "prometheus-client>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "anthropic>=0.116.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mercora"]
